<?xml version="1.0" encoding="utf-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" 
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.apache.jena</groupId>
    <artifactId>jena-fuseki</artifactId>
    <version>5.3.0-SNAPSHOT</version>
    <relativePath/>
  </parent>

  <version>0.0.0-SNAPSHOT</version>
  <artifactId>fuseki-mod-server</artifactId>
  <packaging>jar</packaging>

  <name>Fuseki Server with modules</name>

  <properties>
    <maven.build.timestamp.format>yyyy-MM-dd'T'HH:mm:ssZ</maven.build.timestamp.format>
    <build.time.xsd>${maven.build.timestamp}</build.time.xsd>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <automatic.module.name>org.apache.jena.fuseki.fuseki_mod_server</automatic.module.name>

    <ver.jena>5.3.0-SNAPSHOT</ver.jena>
	  <!--<ver.fmod>0.0.0-SNAPSHOT</ver.fmod>-->
	  <ver.shiro>2.0.2</ver.shiro>
	
	  <ver.junit5>5.11.3</ver.junit5>
    <ver.junit5-platform>1.10.2</ver.junit5-platform>

    <ver.junit>4.13.2</ver.junit>
    <ver.slf4j>2.0.16</ver.slf4j>
    <ver.log4j2>2.24.1</ver.log4j2>

    <!-- Plugins -->
    <!-- From jena parent
    <ver.plugin.rat>0.16.1</ver.plugin.rat>
    <ver.plugin.assembly>3.7.1</ver.plugin.assembly>
    <ver.plugin.compiler>3.13.0</ver.plugin.compiler>
    <ver.plugin.surefire>3.5.2</ver.plugin.surefire>
    <ver.plugin.javadoc>3.11.1</ver.plugin.javadoc>
    <ver.plugin.war>3.4.0</ver.plugin.war>
    <ver.plugin.shade>3.6.0</ver.plugin.shade>
    <ver.plugin.enforcer>3.5.0</ver.plugin.enforcer>
    <ver.plugin.cyclonedx>2.9.0</ver.plugin.cyclonedx>
    <ver.plugin.spdx>0.7.0</ver.plugin.spdx>
    -->

    <!--
    ver.plugin.resources
    ver.plugin.source
    ver.plugin.jar
    -->

  </properties>

  <dependencyManagement>
    <dependencies>
      
      <dependency>
        <groupId>org.apache.jena</groupId>
        <artifactId>jena-bom</artifactId>
        <version>${ver.jena}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>${ver.junit5}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <dependency>
        <groupId>org.apache.shiro</groupId>
        <artifactId>shiro-bom</artifactId>
        <version>${ver.shiro}</version>
        <scope>import</scope>
        <type>pom</type>
      </dependency>

      <dependency>
        <groupId>org.apache.logging.log4j</groupId>
        <artifactId>log4j-bom</artifactId>
        <version>${ver.log4j2}</version>
        <scope>import</scope>
        <type>pom</type>
      </dependency>

<!--    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${ver.junit}</version>
      <scope>test</scope>
    </dependency>
-->    

  </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>org.apache.jena</groupId>
      <artifactId>jena-fuseki-main</artifactId>
    </dependency>
    <dependency>
      <groupId>org.apache.jena</groupId>
      <artifactId>jena-fuseki-ui</artifactId>
      <version>${ver.jena}</version>
    </dependency>

    <dependency>
      <groupId>org.apache.jena</groupId>
      <artifactId>jena-fuseki-core</artifactId>
      <version>${ver.jena}</version>
      <scope>test</scope>
      <classifier>tests</classifier>
    </dependency>
    <dependency>
      <groupId>org.apache.jena</groupId>
      <artifactId>jena-base</artifactId>
      <version>${ver.jena}</version>
      <scope>test</scope>
      <classifier>tests</classifier>
    </dependency>
    
	  <dependency>
      <groupId>org.apache.shiro</groupId>
      <artifactId>shiro-core</artifactId>
    </dependency>

    <dependency>
      <groupId>org.apache.shiro</groupId>
      <artifactId>shiro-web</artifactId>
      <classifier>jakarta</classifier>
    </dependency>

    <!-- Log4j2 -->
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-slf4j2-impl</artifactId>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-core</artifactId>
    </dependency>

<!--    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${ver.junit}</version>
      <scope>test</scope>
    </dependency>
-->    

    <dependency>
      <groupId>org.junit.vintage</groupId>
      <artifactId>junit-vintage-engine</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.junit.platform</groupId>
      <artifactId>junit-platform-suite-engine</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.awaitility</groupId>
      <artifactId>awaitility</artifactId>
      <scope>test</scope>
    </dependency>

  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <!--<version>${ver.plugin.compiler}</version>-->
        <configuration>
          <release>21</release>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <!--<version>${ver.plugin.surefire}</version>-->
        <configuration>
          <useSystemClassLoader>false</useSystemClassLoader>
          <includes>
            <include>**/TS_*.java</include>
          </includes>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <!--<version>${ver.plugin.resources}</version>-->
        <configuration>
          <encoding>UTF-8</encoding>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <!--<version>${ver.plugin.source}</version>-->
        <executions>
          <execution>
            <id>attach-sources</id>
            <!-- <phase>package</phase> package is the default -->
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
          <execution>
            <id>attach-sources-test</id>
            <goals>
              <goal>test-jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <!--<version>${ver.plugin.jar}</version>-->
        <configuration>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>test-jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin> 
      
      <!--
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <!- -<version>${ver.plugin.javadoc}</version>- ->
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <!- - <doclint>none</doclint> - ->
          <!- - To allow the build to keep going despite javadoc problems:
               <failOnError>false</failOnError>
          - ->
          <version>true</version>
          <quiet>true</quiet>
          <show>public</show>
          <encoding>UTF-8</encoding>
          <windowtitle>${project.name} ${project.version}</windowtitle>
          <doctitle>${project.name} ${project.version}</doctitle>
          <bottom>Licensed under the Apache License, Version 2.0</bottom>
        </configuration>
      </plugin>
      -->
    </plugins>
    
  </build>

</project>
